# fa_gemm_minimal

./: .gitignore  CMakeLists.txt  cmake_cc.sh  cmake_cslabs.sh  cublas_ref.cu  fa2_4090_ref.cu  fa2_cuda_test_harness.impl  fa_ampere_cuda.cu  notes.md
cuTK/: README.md
cuTK/include/: cuTK.cuh
cuTK/include/base/: base.cuh  constants.cuh  g2s.cuh  global_layout.cuh  ld_mma.cuh  shared_allocator.cuh  shared_layout.cuh
cuTK/include/hl/: load_g2s.cuh
